--- a/design/component/button.html
+++ b/design/component/button.html
@@ -23,6 +23,8 @@
 	
 </head>
 <body>
+    <div class="se-pre-con"></div>
+    
     <!-- Main container -->
 	<div class="container" id="page">
 		<!-- Header -->
