--- a/design/source/css/main.css
+++ b/design/source/css/main.css
@@ -8,9 +8,19 @@
 }
 
 
-/*======= Helper =======*/
+/*======= Loading =======*/
 
-
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(../img/loading.svg) center no-repeat #fff;
+}
 
 /*======= Main Styles =======*/
 
