--- a/design/component/button.html
+++ b/design/component/button.html
@@ -161,6 +161,49 @@
                         </div>
                     </div>
                     
+                    <!-- Floated -->
+                    <div class="item">
+                        <h3 class="title-item">Floated</h3>
+                        <p>A button can be aligned to the left or right of its container</p>
+                        <div class="display" style="height:38px">
+<button class="ui right floated button">Right Floated</button>
+<button class="ui left floated button">Left Floated</button>
+                        </div>
+                        <div class="source">
+<pre>
+<code class="html hljs xml">
+
+</code>
+</pre>
+                        </div>
+                    </div>
+                    
+                    
+                    <!-- Compact -->
+                    <div class="item">
+                        <h3 class="title-item">Compact</h3>
+                        <p>A button can reduce its padding to fit into tighter spaces</p>
+                        <div class="display">
+<button class="compact ui button">
+  Hold
+</button>
+<button class="ui compact icon button">
+  <i class="pause icon"></i>
+</button>
+<button class="ui compact labeled icon button">
+  <i class="pause icon"></i>
+  Pause
+</button>
+                        </div>
+                        <div class="source">
+<pre>
+<code class="html hljs xml">
+
+</code>
+</pre>
+                        </div>
+                    </div>
+                    
                     <!-- Colors -->
                     <div class="item">
                         <h3 class="title-item">Colors</h3>
@@ -202,6 +245,29 @@
 &lt;div class=&quot;ui inverted segment&quot;&gt;
   &lt;button class=&quot;ui button inverted&quot;&gt;Standard&lt;/button&gt;
 &lt;/div&gt;   
+</code>
+</pre>
+                        </div>
+                    </div>
+                    
+                    <!-- Basic Style -->
+                    <div class="item">
+                        <h3 class="title-item">Basic Style</h3>
+                        <div class="display">
+<button class="ui button basic">Basic</button>
+<button class="ui button basic primary">Primary</button>
+<button class="ui button basic error">Error</button>  
+<button class="ui button basic warning">Warning</button>  
+                        </div>
+                        <div class="source">
+<pre>
+<code class="html hljs xml">
+&lt;button class="ui button basic"&gt;
+  Basic
+&lt;/button&gt;
+&lt;button class="ui button basic primary"&gt;
+  Primary 
+&lt;/button&gt;
 </code>
 </pre>
                         </div>
@@ -429,30 +495,12 @@
                     </div>
                  </div>
                     
-                    <!-- Floated -->
-                    <div class="item">
-                        <h3 class="title-item">Floated</h3>
-                        <p>A button can be aligned to the left or right of its container</p>
-                        <div class="display" style="height:38px">
-<button class="ui right floated button">Right Floated</button>
-<button class="ui left floated button">Left Floated</button>
-                        </div>
-                        <div class="source">
-<pre>
-<code class="html hljs xml">
-
-</code>
-</pre>
-                        </div>
-                    </div>
                 </div>
-                
-            </div>
             
             <!-- Footer -->
             <footer class="footer"></footer>
         </div>
-        
+        </div>
         <!-- Sidebar -->
         <div id="right-side">
             <nav class="sidebar"></nav>
