--- a/design/hoiio-ui/components/form.css
+++ b/design/hoiio-ui/components/form.css
@@ -690,7 +690,7 @@
 .ui.form .inverted.segment .ui.checkbox .box,
 .ui.inverted.form .ui.checkbox label,
 .ui.inverted.form .ui.checkbox .box {
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Inverted Field */
