--- a/design/hoiio-ui/components/statistic.css
+++ b/design/hoiio-ui/components/statistic.css
@@ -353,7 +353,7 @@
 }
 .ui.inverted.statistics .statistic > .label,
 .ui.inverted.statistic .label {
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.inverted.primary.statistics .statistic > .value,
 .ui.statistics .inverted.primary.statistic > .value,
