--- a/design/hoiio-ui/components/button.css
+++ b/design/hoiio-ui/components/button.css
@@ -364,10 +364,10 @@
     round
 ---------------*/
 
-.ui.rounded.button {
+.ui.round.button {
   border-radius: 10em;
 }
-.ui.rounded.button > .icon {
+.ui.round.button > .icon {
   width: 1em;
   vertical-align: baseline;
 }
@@ -805,7 +805,7 @@
 .ui.inverted.button.active,
 .ui.inverted.button.active:focus {
   background: #FFFFFF;
-  color: #FFFFFF;
+  color: #555555;
 }
 
 /*-------------------
@@ -829,15 +829,15 @@
 .ui.labeled.button > .button {
   margin: 0px;
   color: #626262 !important;
-  background-color: #e8e8e8;
+  background-color: #e8e8e8 !important;
 }
 .ui.labeled.button > .button:hover {
-  color: #555555;
-  background-color: #eeeeee;
+  color: #555555 !important;
+  background-color: #eeeeee !important;
 }
 .ui.labeled.button > .button:focus {
-  color: #484848;
-  background-color: #cccccc;
+  color: #484848 !important;
+  background-color: #cccccc !important;
 }
 .ui.labeled.button > .label {
   display: -webkit-box;
@@ -1349,100 +1349,100 @@
 /* Facebook */
 .ui.facebook.button {
   background-color: #3B5998;
-  color: #555555;
+  color: #FFFFFF;
   border-color: #3B5998;
 }
 .ui.facebook.button:hover {
   background-color: #304d8a;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.facebook.button:active {
   background-color: #2d4373;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Twitter */
 .ui.twitter.button {
   background-color: #0084B4;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.twitter.button:hover {
   background-color: #00719b;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.twitter.button:active {
   background-color: #005f81;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Google Plus */
 .ui.google.plus.button {
   background-color: #DC4A38;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.google.plus.button:hover {
   background-color: #de321d;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.google.plus.button:active {
   background-color: #bf3322;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Linked In */
 .ui.linkedin.button {
   background-color: #1F88BE;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.linkedin.button:hover {
   background-color: #147baf;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.linkedin.button:active {
   background-color: #186992;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* YouTube */
 .ui.youtube.button {
   background-color: #CC181E;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.youtube.button:hover {
   background-color: #bd0d13;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.youtube.button:active {
   background-color: #9e1317;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Instagram */
 .ui.instagram.button {
   background-color: #49769C;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.instagram.button:hover {
   background-color: #3d698e;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.instagram.button:active {
   background-color: #395c79;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Pinterest */
 .ui.pinterest.button {
   background-color: #00ACED;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.pinterest.button:hover {
   background-color: #0099d4;
-  color: #555555;
+  color: #FFFFFF;
 }
 .ui.pinterest.button:active {
   background-color: #0087ba;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 
