--- a/design/hoiio-ui/semantic.css
+++ b/design/hoiio-ui/semantic.css
@@ -1069,11 +1069,11 @@ input::selection {
     round
 ---------------*/
 
-.ui.rounded.button {
+.ui.round.button {
   border-radius: 10em;
 }
 
-.ui.rounded.button > .icon {
+.ui.round.button > .icon {
   width: 1em;
   vertical-align: baseline;
 }
@@ -1591,7 +1591,7 @@ input::selection {
 .ui.inverted.button.active,
 .ui.inverted.button.active:focus {
   background: #FFFFFF;
-  color: #FFFFFF;
+  color: #555555;
 }
 
 /*-------------------
@@ -1616,17 +1616,17 @@ input::selection {
 .ui.labeled.button > .button {
   margin: 0px;
   color: #626262 !important;
-  background-color: #e8e8e8;
+  background-color: #e8e8e8 !important;
 }
 
 .ui.labeled.button > .button:hover {
-  color: #555555;
-  background-color: #eeeeee;
+  color: #555555 !important;
+  background-color: #eeeeee !important;
 }
 
 .ui.labeled.button > .button:focus {
-  color: #484848;
-  background-color: #cccccc;
+  color: #484848 !important;
+  background-color: #cccccc !important;
 }
 
 .ui.labeled.button > .label {
@@ -2192,120 +2192,120 @@ input::selection {
 
 .ui.facebook.button {
   background-color: #3B5998;
-  color: #555555;
+  color: #FFFFFF;
   border-color: #3B5998;
 }
 
 .ui.facebook.button:hover {
   background-color: #304d8a;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.facebook.button:active {
   background-color: #2d4373;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Twitter */
 
 .ui.twitter.button {
   background-color: #0084B4;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.twitter.button:hover {
   background-color: #00719b;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.twitter.button:active {
   background-color: #005f81;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Google Plus */
 
 .ui.google.plus.button {
   background-color: #DC4A38;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.google.plus.button:hover {
   background-color: #de321d;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.google.plus.button:active {
   background-color: #bf3322;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Linked In */
 
 .ui.linkedin.button {
   background-color: #1F88BE;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.linkedin.button:hover {
   background-color: #147baf;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.linkedin.button:active {
   background-color: #186992;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* YouTube */
 
 .ui.youtube.button {
   background-color: #CC181E;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.youtube.button:hover {
   background-color: #bd0d13;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.youtube.button:active {
   background-color: #9e1317;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Instagram */
 
 .ui.instagram.button {
   background-color: #49769C;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.instagram.button:hover {
   background-color: #3d698e;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.instagram.button:active {
   background-color: #395c79;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Pinterest */
 
 .ui.pinterest.button {
   background-color: #00ACED;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.pinterest.button:hover {
   background-color: #0099d4;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.pinterest.button:active {
   background-color: #0087ba;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /*******************************
@@ -8068,7 +8068,7 @@ img.ui.bordered.image {
   color: #626262;
   text-transform: none;
   font-weight: 500;
-  border: 0px solid transparent;
+  border: 1px solid transparent;
   border-radius: 0.28571429rem;
   -webkit-transition: background 0.05s ease;
   transition: background 0.05s ease;
@@ -8823,7 +8823,7 @@ a.ui.basic.warning.label:hover {
 .ui.basic.label {
   color: #6f6f6f;
   background: #ffffff;
-  border: #d9d9d9;
+  border-color: #d9d9d9;
 }
 
 /* Link */
@@ -8832,7 +8832,7 @@ a.ui.basic.label:hover {
   text-decoration: none;
   background: #ffffff;
   color: #555555;
-  border: #b3b3b3;
+  border-color: #b3b3b3;
 }
 
 /* Pointing */
@@ -8857,7 +8857,7 @@ a.ui.basic.label:hover {
 
 .ui.inverted.labels .label,
 .ui.inverted.label {
-  color: #555555 !important;
+  color: #FFFFFF !important;
 }
 
 /*-------------------
@@ -9481,7 +9481,7 @@ ol.ui.list ol li,
 
 .ui.inverted.list .list > .item .header,
 .ui.inverted.list > .item .header {
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.inverted.list .list > .item .description,
@@ -9494,7 +9494,7 @@ ol.ui.list ol li,
 .ui.inverted.list .list > a.item,
 .ui.inverted.list > a.item {
   cursor: pointer;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.inverted.list .list > a.item:hover,
@@ -9505,7 +9505,7 @@ ol.ui.list ol li,
 /* Linking Content */
 
 .ui.inverted.list .item a:not(.ui) {
-  color: #555555 !important;
+  color: #FFFFFF !important;
 }
 
 .ui.inverted.list .item a:not(.ui):hover {
@@ -10292,7 +10292,7 @@ ol.ui.horizontal.list li:before,
 /* Black Dimmer */
 
 .ui.dimmer .ui.loader {
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.dimmer .ui.loader:before {
@@ -10418,7 +10418,7 @@ ol.ui.horizontal.list li:before,
 --------------------*/
 
 .ui.inverted.loader {
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.inverted.loader:before {
@@ -11497,7 +11497,7 @@ ol.ui.horizontal.list li:before,
 .ui.inverted.segment,
 .ui.primary.inverted.segment {
   background: #1B1C1D;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Nested */
@@ -11507,7 +11507,7 @@ ol.ui.horizontal.list li:before,
 }
 
 .ui.inverted.segment .inverted.segment {
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Attached */
@@ -13161,7 +13161,7 @@ ol.ui.horizontal.list li:before,
 .ui.form .inverted.segment .ui.checkbox .box,
 .ui.inverted.form .ui.checkbox label,
 .ui.inverted.form .ui.checkbox .box {
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Inverted Field */
@@ -16101,7 +16101,7 @@ ol.ui.horizontal.list li:before,
 
 .ui.inverted.menu .search.dropdown.item > .search,
 .ui.inverted.menu .search.dropdown.item > .text {
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /* Vertical */
@@ -16894,7 +16894,7 @@ Floated Menu / Item
 }
 
 .ui.secondary.inverted.pointing.menu .item {
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.secondary.inverted.pointing.menu .header.item {
@@ -17213,7 +17213,7 @@ Floated Menu / Item
 .ui.inverted.menu .item,
 .ui.inverted.menu .item > a:not(.ui) {
   background: transparent;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.inverted.menu .item.menu {
@@ -18062,7 +18062,7 @@ Floated Menu / Item
 
 .ui.black.message {
   background-color: #1B1C1D;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /*--------------
@@ -18154,7 +18154,7 @@ Floated Menu / Item
 .ui.inverted.message,
 .ui.black.message {
   background-color: #1B1C1D;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /*--------------
@@ -19127,14 +19127,14 @@ Floated Menu / Item
 
 .ui.inverted.table {
   background: #333333;
-  color: #555555;
+  color: #FFFFFF;
   border: none;
 }
 
 .ui.inverted.table th {
   background-color: rgba(0, 0, 0, 0.15);
   border-color: rgba(255, 255, 255, 0.1) !important;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.inverted.table tr td {
@@ -22016,7 +22016,7 @@ a.ui.card:hover,
 
 .ui.inverted.statistics .statistic > .label,
 .ui.inverted.statistic .label {
-  color: #555555;
+  color: #FFFFFF;
 }
 
 .ui.inverted.primary.statistics .statistic > .value,
@@ -22390,7 +22390,7 @@ a.ui.card:hover,
 ---------------*/
 
 .ui.inverted.accordion .title:not(.ui) {
-  color: #555555;
+  color: #FFFFFF;
 }
 
 /*******************************
