--- a/design/component/button.html
+++ b/design/component/button.html
@@ -172,7 +172,8 @@
                         <div class="source">
 <pre>
 <code class="html hljs xml">
-
+&lt;button class=&quot;ui right floated button&quot;&gt;Right Floated&lt;/button&gt;
+&lt;button class=&quot;ui left floated button&quot;&gt;Left Floated&lt;/button&gt;
 </code>
 </pre>
                         </div>
@@ -198,7 +199,16 @@
                         <div class="source">
 <pre>
 <code class="html hljs xml">
-
+&lt;button class=&quot;compact ui button&quot;&gt;
+  Hold
+&lt;/button&gt;
+&lt;button class=&quot;ui compact icon button&quot;&gt;
+  &lt;i class=&quot;pause icon&quot;&gt;&lt;/i&gt;
+&lt;/button&gt;
+&lt;button class=&quot;ui compact labeled icon button&quot;&gt;
+  &lt;i class=&quot;pause icon&quot;&gt;&lt;/i&gt;
+  Pause
+&lt;/button&gt;
 </code>
 </pre>
                         </div>
@@ -484,12 +494,23 @@
 <div class="ui left labeled button" tabindex="0">
     <a class="ui basic label"> 1,048 </a>
     <div class="ui icon button"><i class="cart icon"></i></div>
-</div>
+</div>                         
                     </div>
                     <div class="source">
 <pre>
 <code class="html hljs xml">
-
+&lt;div class=&quot;ui labeled button&quot;&gt;
+    &lt;div class=&quot;ui button&quot;&gt;&lt;i class=&quot;heart icon&quot;&gt;&lt;/i&gt; Like &lt;/div&gt;
+    &lt;a class=&quot;ui basic label&quot;&gt; 2,048 &lt;/a&gt;
+&lt;/div&gt;
+&lt;div class=&quot;ui left labeled button&quot;&gt;
+    &lt;a class=&quot;ui basic right pointing label&quot;&gt; 2,048 &lt;/a&gt;
+    &lt;div class=&quot;ui button&quot;&gt;&lt;i class=&quot;heart icon&quot;&gt;&lt;/i&gt; Like &lt;/div&gt;
+&lt;/div&gt;
+&lt;div class=&quot;ui left labeled button&quot; tabindex=&quot;0&quot;&gt;
+    &lt;a class=&quot;ui basic label&quot;&gt; 1,048 &lt;/a&gt;
+    &lt;div class=&quot;ui icon button&quot;&gt;&lt;i class=&quot;cart icon&quot;&gt;&lt;/i&gt;&lt;/div&gt;
+&lt;/div&gt; 
 </code>
 </pre>
                     </div>
