--- a/design/hoiio-ui/components/button.css
+++ b/design/hoiio-ui/components/button.css
@@ -887,7 +887,7 @@
 ---------------*/
 
 .ui.button > .icon:not(.button) {
-  height: 0.85714286em;
+  /*height: @iconHeight;*/
   opacity: 0.8;
   margin: 0em 0.42857143em 0em -0.21428571em;
   -webkit-transition: opacity 0.05s ease;
