--- a/design/hoiio-ui/semantic.css
+++ b/design/hoiio-ui/semantic.css
@@ -1682,7 +1682,7 @@ input::selection {
 ---------------*/
 
 .ui.button > .icon:not(.button) {
-  height: 0.85714286em;
+  /*height: @iconHeight;*/
   opacity: 0.8;
   margin: 0em 0.42857143em 0em -0.21428571em;
   -webkit-transition: opacity 0.05s ease;
@@ -7641,37 +7641,37 @@ img.ui.bordered.image {
 ---------------------*/
 
 .ui.input.error input {
-  background-color: #e64333;
-  border-color: #e64333;
-  color: #FFFFFF;
+  background-color: #fff6f6;
+  border-color: #e0b4b4;
+  color: #9f3a38;
 }
 
 /* Error Placeholder */
 
 .ui.input.error input::-webkit-input-placeholder {
-  color: #ffffff;
+  color: #e7bdbc;
 }
 
 .ui.input.error input::-moz-placeholder {
-  color: #ffffff;
+  color: #e7bdbc;
 }
 
 .ui.input.error input::-ms-input-placeholder {
-  color: #ffffff;
+  color: #e7bdbc;
 }
 
 /* Focused Error Placeholder */
 
 .ui.input.error input:focus::-webkit-input-placeholder {
-  color: #ffffff;
+  color: #da9796;
 }
 
 .ui.input.error input:focus::-moz-placeholder {
-  color: #ffffff;
+  color: #da9796;
 }
 
 .ui.input.error input:focus::-ms-input-placeholder {
-  color: #ffffff;
+  color: #da9796;
 }
 
 /*******************************
@@ -7810,6 +7810,7 @@ img.ui.bordered.image {
   flex: 0 0 auto;
   margin: 0;
   font-size: 1em;
+  border: 1px solid #ccc;
 }
 
 .ui.labeled.input > .label:not(.corner) {
