--- a/design/hoiio-ui/components/checkbox.css
+++ b/design/hoiio-ui/components/checkbox.css
@@ -160,7 +160,7 @@
 .ui.checkbox input:focus ~ .box:before,
 .ui.checkbox input:focus ~ label:before {
   background: #FFFFFF;
-  border-color: #96C8DA;
+  border-color: #008bd9;
 }
 .ui.checkbox input:focus ~ .box:after,
 .ui.checkbox input:focus ~ label:after {
@@ -209,7 +209,7 @@
 .ui.checkbox input:checked:focus ~ .box:before,
 .ui.checkbox input:checked:focus ~ label:before {
   background: #FFFFFF;
-  border-color: #96C8DA;
+  border-color: #008bd9;
 }
 .ui.checkbox input:indeterminate:focus ~ .box:after,
 .ui.checkbox input:indeterminate:focus ~ label:after,
