--- a/design/source/css/hoiio-semantic.css
+++ b/design/source/css/hoiio-semantic.css
@@ -209,7 +209,8 @@ h2:not(.h2-reset){
 }
 
 h3:not(.h3-reset){
-    margin: 30px 0 20px 0 !important; 
+    margin: 10px 0 20px 0 !important; 
+    padding-top: 20px;
     letter-spacing: 2px;
     font-size: 14px;
     text-transform: uppercase;
@@ -317,6 +318,9 @@ p.small {
 /*----- Left-Side -----*/
 
 
+
+
+
 #left-side{
     width: 820px;
     padding-left: 76px;
@@ -325,45 +329,83 @@ p.small {
     display: block; 
 }
 
+
 .body-content {
-    width: 100%
+    width: 100%;
+    height: auto;
 }
 
-.body-content p:not(.paragraph) {
+.body-content p:not(.paragraph):not(.usage) {
     font-size: 16px;
     font-weight: 300;
     line-height: 1.8em;
-    margin: 20px 0;
+    margin: 20px 0 20px 0;
     color: rgba(0,0,0,.8);
 }
+
+.body-content .display{
+    padding-top: 5px; 
+    
+}
+
 
 .body-content .group-item{
     padding-top: 20px;   
 }
 
 .body-content .item{
-    padding-bottom: 0px;   
+    padding-bottom: 0px;  
+    height: 100%; 
 }
 
 .system-layout .body-content .item{
     padding-bottom: 30px;   
 }
 
-
 .system-color .body-content .item{
     padding-bottom: 50px;   
 }
 
 .body-content .title-item{
-    color:#66b313;
+    color:#66b313;  
+}
+
+.body-content .title-item a{
+    color: #555 !important;
+    opacity: 0.5;
+}
+
+.body-content .title-item a:hover{
+    opacity: 1;
+}
+
+.body-content p.usage{
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.8em;
+    margin: 30px 0 0 0;
+    color: rgba(0,0,0,.8);
+    
+}
+
+.body-content p.usage span{
+    font-weight: 800;
+    font-size: 12px;
+    text-transform: uppercase;
+    color: rgba(0,0,0,.6);
+    
 }
 
 .body-content .source {
     background: #f6f6f6;
     padding: 15px 30px 15px 0;
     position: relative;
-    margin: 30px 0 20px 0;
-   
+    margin: 10px 0 20px 0;
+    
+}
+
+.display + .source {
+    margin-top: 30px !important;
 }
 
 .body-content .source:before {
@@ -732,7 +774,7 @@ td.type-info{
 
 .demo-icon
     {
-      font-family: "hoiioicons";
+      font-family: "Icons";
       font-style: normal;
       font-weight: normal;
       speak: none;
