--- a/design/source/css/sample.css
+++ b/design/source/css/sample.css
@@ -46,3 +46,12 @@ body > .grid {
         margin: 0 18em;
     }
 }
+
+
+.primary.header{
+    margin-bottom: 30px;
+}
+
+.form > .field:last-child{
+ padding-top: 0.5em !important;
+}
