--- a/design/hoiio-ui/components/input.css
+++ b/design/hoiio-ui/components/input.css
@@ -40,9 +40,9 @@
   outline: none;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   text-align: left;
-  line-height: inherit;
+  line-height: 1.2rem;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  padding: 0.57142857em 1.14285714em !important;
+  padding: 0.78571429em 1.14285714em !important;
   background: #ffffff;
   border: 1px solid #cccccc;
   color: #414141;
@@ -243,7 +243,7 @@
   right: 0px;
   margin: 0em;
   height: 100%;
-  width: 2.24285714em;
+  width: 2.67142857em;
   opacity: 0.5;
   border-radius: 0em 0.28571429rem 0.28571429rem 0em;
   -webkit-transition: opacity 0.3s ease;
@@ -253,7 +253,7 @@
   pointer-events: none;
 }
 .ui.icon.input input {
-  padding-right: 2.24285714em !important;
+  padding-right: 2.67142857em !important;
 }
 .ui.icon.input > i.icon:before,
 .ui.icon.input > i.icon:after {
@@ -283,7 +283,7 @@
   left: 0.5em;
 }
 .ui[class*="left icon"].input > input {
-  padding-left: 2.24285714em !important;
+  padding-left: 2.67142857em !important;
   padding-right: 1.14285714em !important;
 }
 
@@ -308,8 +308,8 @@
   border: 1px solid #ccc;
 }
 .ui.labeled.input > .label:not(.corner) {
-  padding-top: 0.57142857em;
-  padding-bottom: 0.57142857em;
+  padding-top: 0.78571429em;
+  padding-bottom: 0.78571429em;
 }
 
 /* Regular Label on Left */
@@ -401,8 +401,8 @@
 }
 .ui.action.input > .button,
 .ui.action.input > .buttons > .button {
-  padding-top: 0.57142857em;
-  padding-bottom: 0.57142857em;
+  padding-top: 0.78571429em;
+  padding-bottom: 0.78571429em;
   margin: 0;
 }
 
