--- a/design/hoiio-ui/components/search.css
+++ b/design/hoiio-ui/components/search.css
@@ -25,8 +25,8 @@
   text-shadow: none;
   font-style: normal;
   font-weight: normal;
-  line-height: 1.786;
-  padding: 0.17842857em 1.14285714em;
+  line-height: 1.2rem;
+  padding: 0.68571429em 1.14285714em;
   font-size: 1em;
   background: #ffffff;
   border: 1px solid #cccccc;
