--- a/design/hoiio-ui/semantic.css
+++ b/design/hoiio-ui/semantic.css
@@ -554,7 +554,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: 2.143rem;
   /* 25px */
 }
 
@@ -683,12 +683,12 @@ input::selection {
 .ui.button {
   cursor: pointer;
   display: inline-block;
-  line-height: inherit;
+  line-height: 1rem;
   outline: none;
   color: #545454;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0em 0em;
-  padding: 0.57142857em 1.14285714em;
+  padding: 0.85714286em 1.14285714em;
   font-weight: 500;
   font-style: normal;
   letter-spacing: 0.3px;
@@ -893,17 +893,17 @@ input::selection {
 
 .ui.compact.buttons .button,
 .ui.compact.button {
-  padding: 0.42857143em 0.85714286em 0.42857143em;
+  padding: 0.64285714em 0.85714286em 0.64285714em;
 }
 
 .ui.compact.icon.buttons .button,
 .ui.compact.icon.button {
-  padding: 0.42857143em 0.42857143em 0.42857143em;
+  padding: 0.64285714em 0.64285714em 0.64285714em;
 }
 
 .ui.compact.labeled.icon.buttons .button,
 .ui.compact.labeled.icon.button {
-  padding: 0.42857143em 3em 0.42857143em;
+  padding: 0.64285714em 3.57142857em 0.64285714em;
 }
 
 /*-------------------
@@ -965,7 +965,7 @@ input::selection {
 .ui.labeled.icon.buttons .button,
 .ui.labeled.icon.button {
   position: relative;
-  padding-left: 3.28571429em !important;
+  padding-left: 3.85714286em !important;
   padding-right: 1.14285714em !important;
 }
 
@@ -981,7 +981,7 @@ input::selection {
   border-bottom-left-radius: inherit;
   text-align: center;
   margin: 0em;
-  width: 2.14285714em;
+  width: 2.71428571em;
   background-color: rgba(0, 0, 0, 0.1);
   color: '';
 }
@@ -997,7 +997,7 @@ input::selection {
 /* Right Labeled */
 
 .ui[class*="right labeled"].icon.button {
-  padding-right: 3.28571429em !important;
+  padding-right: 3.85714286em !important;
   padding-left: 1.14285714em !important;
 }
 
@@ -1647,7 +1647,7 @@ input::selection {
 
 .ui.icon.buttons .button,
 .ui.icon.button {
-  padding: 0.57142857em 0.57142857em 0.57142857em;
+  padding: 0.85714286em 0.85714286em 0.85714286em;
 }
 
 .ui.icon.buttons .button > .icon,
@@ -4111,7 +4111,7 @@ h1.ui.header {
 }
 
 h2.ui.header {
-  font-size: 1.8rem;
+  font-size: 2.143rem;
 }
 
 h3.ui.header {
@@ -4161,7 +4161,7 @@ h5.ui.header .sub.header {
 }
 
 .ui.large.header {
-  font-size: 1.8em;
+  font-size: 2.143em;
 }
 
 .ui.medium.header {
@@ -7481,9 +7481,9 @@ img.ui.bordered.image {
   outline: none;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   text-align: left;
-  line-height: inherit;
+  line-height: 1.2rem;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  padding: 0.57142857em 1.14285714em !important;
+  padding: 0.78571429em 1.14285714em !important;
   background: #ffffff;
   border: 1px solid #cccccc;
   color: #414141;
@@ -7701,7 +7701,7 @@ img.ui.bordered.image {
   right: 0px;
   margin: 0em;
   height: 100%;
-  width: 2.24285714em;
+  width: 2.67142857em;
   opacity: 0.5;
   border-radius: 0em 0.28571429rem 0.28571429rem 0em;
   -webkit-transition: opacity 0.3s ease;
@@ -7713,7 +7713,7 @@ img.ui.bordered.image {
 }
 
 .ui.icon.input input {
-  padding-right: 2.24285714em !important;
+  padding-right: 2.67142857em !important;
 }
 
 .ui.icon.input > i.icon:before,
@@ -7749,7 +7749,7 @@ img.ui.bordered.image {
 }
 
 .ui[class*="left icon"].input > input {
-  padding-left: 2.24285714em !important;
+  padding-left: 2.67142857em !important;
   padding-right: 1.14285714em !important;
 }
 
@@ -7776,8 +7776,8 @@ img.ui.bordered.image {
 }
 
 .ui.labeled.input > .label:not(.corner) {
-  padding-top: 0.57142857em;
-  padding-bottom: 0.57142857em;
+  padding-top: 0.78571429em;
+  padding-bottom: 0.78571429em;
 }
 
 /* Regular Label on Left */
@@ -7885,8 +7885,8 @@ img.ui.bordered.image {
 
 .ui.action.input > .button,
 .ui.action.input > .buttons > .button {
-  padding-top: 0.57142857em;
-  padding-bottom: 0.57142857em;
+  padding-top: 0.78571429em;
+  padding-bottom: 0.78571429em;
   margin: 0;
 }
 
@@ -12360,7 +12360,7 @@ ol.ui.horizontal.list li:before,
 ---------------------*/
 
 .ui.form > p {
-  margin: 1.5em 0em;
+  margin: 1.429em 0em;
 }
 
 /*--------------------
@@ -12369,7 +12369,7 @@ ol.ui.horizontal.list li:before,
 
 .ui.form .field {
   clear: both;
-  margin: 0em 0em 1.5em;
+  margin: 0em 0em 1.429em;
 }
 
 .ui.form .field:last-child,
@@ -12379,7 +12379,7 @@ ol.ui.horizontal.list li:before,
 
 .ui.form .fields .field {
   clear: both;
-  margin: 0em 0em 1.5em;
+  margin: 0em 0em 1.429em;
 }
 
 /*--------------------
@@ -12388,12 +12388,12 @@ ol.ui.horizontal.list li:before,
 
 .ui.form .field > label {
   display: block;
-  margin: 0em 0em 0.28571429rem 0em;
-  color: #545454;
-  font-size: 0.9em;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 0.05rem;
+  margin: 0em 0em 0.42857143rem 0em;
+  color: #414141;
+  font-size: 1.14285714em;
+  font-weight: normal;
+  text-transform: none;
+  letter-spacing: 0.3px;
 }
 
 /*--------------------
@@ -12420,7 +12420,7 @@ ol.ui.horizontal.list li:before,
 
 .ui.form ::-webkit-datetime-edit,
 .ui.form ::-webkit-inner-spin-button {
-  height: 1.786;
+  height: 1.2rem;
 }
 
 .ui.form input:not([type]),
@@ -12439,12 +12439,12 @@ ol.ui.horizontal.list li:before,
   outline: none;
   -webkit-appearance: none;
   tap-highlight-color: rgba(255, 255, 255, 0);
-  line-height: 1em;
-  padding: 0.57142857em 1.14285714em;
+  line-height: 1.2rem;
+  padding: 0.78571429em 1.14285714em;
   font-size: 1em;
   background: #ffffff;
   border: 1px solid #cccccc;
-  color: #414141;
+  color: #ffffff;
   border-radius: 0.28571429rem;
   box-shadow: 0em 0em 0em 0em transparent inset;
   -webkit-transition: color 0.05s ease, border-color 0.05s ease;
@@ -12457,7 +12457,7 @@ ol.ui.horizontal.list li:before,
   margin: 0em;
   -webkit-appearance: none;
   tap-highlight-color: rgba(255, 255, 255, 0);
-  padding: 0.57142857em 1.14285714em;
+  padding: 0.78571429em 1.14285714em;
   background: #ffffff;
   border: 1px solid #cccccc;
   outline: none;
@@ -12656,27 +12656,27 @@ ol.ui.horizontal.list li:before,
 /* browsers require these rules separate */
 
 .ui.form ::-webkit-input-placeholder {
-  color: #ffffff;
+  color: #cdcdcd;
 }
 
 .ui.form ::-ms-input-placeholder {
-  color: #ffffff;
+  color: #cdcdcd;
 }
 
 .ui.form ::-moz-placeholder {
-  color: #ffffff;
+  color: #cdcdcd;
 }
 
 .ui.form :focus::-webkit-input-placeholder {
-  color: #ffffff;
+  color: #9a9a9a;
 }
 
 .ui.form :focus::-ms-input-placeholder {
-  color: #ffffff;
+  color: #9a9a9a;
 }
 
 .ui.form :focus::-moz-placeholder {
-  color: #ffffff;
+  color: #9a9a9a;
 }
 
 /* Error Placeholder */
@@ -13103,7 +13103,7 @@ ol.ui.horizontal.list li:before,
 
 .ui.form .grouped.fields {
   display: block;
-  margin: 0em 0em 1.5em;
+  margin: 0em 0em 1.429em;
 }
 
 .ui.form .grouped.fields:last-child {
@@ -13111,11 +13111,11 @@ ol.ui.horizontal.list li:before,
 }
 
 .ui.form .grouped.fields > label {
-  margin: 0em 0em 0.28571429rem 0em;
-  color: #545454;
-  font-size: 0.9em;
-  font-weight: bold;
-  text-transform: uppercase;
+  margin: 0em 0em 0.42857143rem 0em;
+  color: #414141;
+  font-size: 1.14285714em;
+  font-weight: normal;
+  text-transform: none;
 }
 
 .ui.form .grouped.fields .field,
@@ -13232,18 +13232,18 @@ ol.ui.horizontal.list li:before,
   .ui.form .ten.fields > .fields,
   .ui.form .ten.fields > .field {
     width: 100% !important;
-    margin: 0em 0em 1.5em;
+    margin: 0em 0em 1.429em;
     padding-left: 0%;
     padding-right: 0%;
   }
 }
 
 .ui.form .fields .field:first-child {
-  padding-left: 0%;
+  padding-left: 0% !important;
 }
 
 .ui.form .fields .field:last-child {
-  padding-right: 0%;
+  padding-right: 0% !important;
 }
 
 /* Sizing Combinations */
@@ -13353,7 +13353,7 @@ ol.ui.horizontal.list li:before,
   .ui.form .fields > .fifteen.wide.field,
   .ui.form .fields > .sixteen.wide.field {
     width: 100% !important;
-    margin: 0em 0em 1.5em;
+    margin: 0em 0em 1.429em;
     padding-left: 0%;
     padding-right: 0%;
   }
@@ -13377,7 +13377,7 @@ ol.ui.horizontal.list li:before,
 ---------------------*/
 
 .ui.form .inline.fields {
-  margin: 0em 0em 1.5em;
+  margin: 0em 0em 1.429em;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -13401,10 +13401,10 @@ ol.ui.horizontal.list li:before,
   margin-top: 0em;
   margin-bottom: 0em;
   vertical-align: baseline;
-  font-size: 0.9em;
-  font-weight: bold;
-  color: #545454;
-  text-transform: uppercase;
+  font-size: 1.14285714em;
+  font-weight: normal;
+  color: #414141;
+  text-transform: none;
 }
 
 /* Grouped Inline Label */
@@ -23550,16 +23550,16 @@ body.dimmable > .dimmer {
 .ui.selection.dropdown {
   cursor: pointer;
   word-wrap: break-word;
-  line-height: 1em;
+  line-height: 1.2rem;
   white-space: normal;
   outline: 0;
   -webkit-transform: rotateZ(0deg);
   transform: rotateZ(0deg);
   min-width: 14em;
-  min-height: 2.85742857em;
+  min-height: 2.7rem;
   background: #ffffff;
   display: inline-block;
-  padding: 0.57142857em 2.74285714em 0.57142857em 1.14285714em;
+  padding: 0.78571429em 2.74285714em 0.78571429em 1.14285714em;
   color: #414141;
   box-shadow: none;
   border: 1px solid #cccccc;
@@ -23588,8 +23588,8 @@ select.ui.dropdown {
   top: auto;
   width: auto;
   z-index: 3;
-  margin: -0.57142857em;
-  padding: 0.57142857em;
+  margin: -0.78571429em;
+  padding: 0.78571429em;
   right: 1.14285714em;
   opacity: 0.8;
   -webkit-transition: opacity 0.05s ease;
@@ -23774,8 +23774,8 @@ select.ui.dropdown {
 /* Search Selection */
 
 .ui.search.selection.dropdown > input.search {
-  line-height: 1.786;
-  padding: 0.17842857em 2.74285714em 0.17842857em 1.14285714em;
+  line-height: 1.2rem;
+  padding: 0.68571429em 2.74285714em 0.68571429em 1.14285714em;
 }
 
 /* Active/Visible Search */
@@ -23842,7 +23842,7 @@ select.ui.dropdown {
 /* Multiple Selection */
 
 .ui.multiple.dropdown {
-  padding: 0.05947619em 2.74285714em 0.05947619em 0.42857143em;
+  padding: 0.22857143em 2.74285714em 0.22857143em 0.42857143em;
 }
 
 .ui.multiple.dropdown .menu {
@@ -23888,8 +23888,8 @@ select.ui.dropdown {
   position: static;
   padding: 0;
   max-width: 100%;
-  margin: 0.11895238em 0em 0.11895238em 0.71428571em;
-  line-height: 1.786;
+  margin: 0.45714286em 0em 0.45714286em 0.71428571em;
+  line-height: 1.2rem;
 }
 
 .ui.multiple.dropdown > .label ~ .text {
@@ -23908,8 +23908,8 @@ select.ui.dropdown {
   top: 0;
   left: 0;
   padding: inherit;
-  margin: 0.11895238em 0em 0.11895238em 0.71428571em;
-  line-height: 1.786;
+  margin: 0.45714286em 0em 0.45714286em 0.71428571em;
+  line-height: 1.2rem;
 }
 
 .ui.multiple.search.dropdown > .label ~ .text {
@@ -23922,9 +23922,9 @@ select.ui.dropdown {
   position: static;
   padding: 0;
   max-width: 100%;
-  margin: 0.11895238em 0em 0.11895238em 0.71428571em;
+  margin: 0.45714286em 0em 0.45714286em 0.71428571em;
   width: 2.2em;
-  line-height: 1.786;
+  line-height: 1.2rem;
 }
 
 /*--------------
@@ -26750,8 +26750,8 @@ a.ui.nag {
   text-shadow: none;
   font-style: normal;
   font-weight: normal;
-  line-height: 1.786;
-  padding: 0.17842857em 1.14285714em;
+  line-height: 1.2rem;
+  padding: 0.68571429em 1.14285714em;
   font-size: 1em;
   background: #ffffff;
   border: 1px solid #cccccc;
