--- a/design/source/css/sample.css
+++ b/design/source/css/sample.css
@@ -37,18 +37,56 @@ body > .grid {
 }
 
 #wrapper > .column {
-    max-width: 30em;
-    margin: 0 auto;
+   max-width: 35em;
+  margin: 0 auto;
+}
+
+.ui.header{
+    margin-bottom: 40px;
+    font-weight: 300;
+    text-align: left;
 }
 
 @media only screen and (min-width: 992px){
-    #wrapper > .column {
+    /*#wrapper > .column {
         margin: 0 18em;
+    }*/
+    .ui.segment{
+    padding: 50px 70px 40px 70px !important;
+}
+    h1.ui.header{
+        font-size: 2.5rem !important;
     }
 }
+.ui.form .field>label {
+    display: block;
+    margin: 0 0 0.5rem;
+    color: #777;
+    font-size: 12px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: .5px;
+   
+}
 
+img{
+        width: 115px;
+    margin:60px 0;
+}
 
-.primary.header{
+.ui.segment{
+    padding: 35px;
+    border-radius: 6px;
+}
+
+h1.ui.header{
+        font-size:2rem;
+    }
+
+.instruction{
+    font-size: 16px;
+    font-weight: 300;
+    margin-top: 0;
     margin-bottom: 30px;
 }
 
