--- a/design/source/css/sample.css
+++ b/design/source/css/sample.css
@@ -57,6 +57,10 @@ body > .grid {
     h1.ui.header{
         font-size: 2.5rem !important;
     }
+    
+    img{
+        margin:60px 0 !important;
+    }
 }
 .ui.form .field>label {
     display: block;
@@ -70,8 +74,8 @@ body > .grid {
 }
 
 img{
-        width: 115px;
-    margin:60px 0;
+    width: 115px;
+    margin:40px 0;
 }
 
 .ui.segment{
